# python-validator

./: .gitignore  README.md  prompt.md  pyproject.toml  run.bat
csv_validator_web/: app.py
csv_validator_web/rules/: example_compare.yaml  example_single.yaml
csv_validator_web/src/core/: io.py  issue_writer.py  mapping_guess.py  models.py
csv_validator_web/src/validators/: __init__.py  required_columns.py  unique_key.py
csv_validator_web/src/web/: forms.py
csv_validator_web/src/web/static/: app.css
csv_validator_web/src/web/templates/: base.html  mapping.html  mappings.html  new_run.html  run.html  run_issues.html
mappings/: README.md
src/core/: html_report.py  io.py  mapping_store.py  normalize.py  rules_loader.py  runner.py  transform_guess.py  utils.py
src/validators/: allowed_values.py  compare_fields.py  cross_file_match.py  range.py  regex.py  required_non_null.py  row_rules.py  type_checks.py
src/web/: server.py
src/web/static/: app.css  app.js
src/web/templates/: base.html  home.html  mapping.html  mapping_columns.html  mapping_transform.html  mappings.html  new_run.html  run.html  run_issues.html  runs.html
